clusters/KC-Int/deployments/default/fastapi-dls/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-dls
  namespace: apps
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fastapi-dls
  template:
    metadata:
      labels:
        app: fastapi-dls
    spec:
      containers:
        - name: fastapi-dls
          image: collinwebdesigns/fastapi-dls:1.3.12
          volumeMounts:
            - name: cert-webserver
              mountPath: /app/cert
              readOnly: true
            - name: cert-instance
              mountPath: /app/cert/instance
              readOnly: true
            - name: pvc
              mountPath: /app/database
              subPath: database
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: fastapi-dls
        - name: cert-webserver
          secret:
            secretName: production-tls
            items:
            - key: tls.crt
              path: webserver.crt
            - key: tls.key
              path: webserver.key
        - name: cert-instance
          secret: 
            secretName: fastapi-dls-env
            items:
            - key: instance.private.pem
              path: instance.private.pem
            - key: instance.public.pem
              path: instance.public.pem
