clusters/KC-Int/deployments/default/fastapi-dls/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: fastapi-dls
spec:
    selector:
        app: fastapi-dls
    ports:
        - name: https
          port: 443
